<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:padding="@dimen/Std_LinearPadding">
	<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/ServerMain_Query_PromptQuery"/>
	<EditText android:id="@+id/ServerMain_Query_QueryBox"
	          android:layout_width="match_parent"
	          android:layout_height="wrap_content"
	          android:hint="@string/ServerMain_Query_QueryHint"
	          android:typeface="monospace"
	          android:fontFamily="monospace"
	          android:inputType="textMultiLine|textNoSuggestions"
	          android:imeOptions="flagNoExtractUi"/>
	<Button android:id="@+id/ServerMain_Query_QueryButton"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/ServerMain_Query_Execute"/>
</LinearLayout>